--- a/.github/workflows/tf-pr-commenter.yml
+++ b/.github/workflows/tf-pr-commenter.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Setup tflint AzureRM plugin
-        working-directory: ${{ github.workspace }}/src/Terraform/key-vault
+        working-directory: ${{ github.workspace }}/src/Terraform/container-registry
         run: |
             echo 'plugin "azurerm" {' >.tflint.hcl
             echo '  enabled = true' >>.tflint.hcl
@@ -35,7 +35,7 @@ jobs:
         uses: reviewdog/action-tflint@master
         with:
           github_token: ${{ github.token }}
-          working_directory: "src/Terraform/key-vault"
+          working_directory: "src/Terraform/container-registry"
           reporter: github-pr-review
           fail_on_error: "true"
           tflint_version: "${{ env.tfLintVersion }}"
