--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -33,11 +33,11 @@ stages:
         script: |
           npm install snyk@latest -g
           snyk auth $(SnykAPIConnection)
-          snyk iac test ./src/Bicep/vaults/deploy.json --json-file-output=./SnykReport-Keyvault.json
+          snyk iac test ./src/Bicep/AzureSecurityCenter/deploy.json --json-file-output=./SnykReport-AzureSecurityCenter.json
           write-host "test"
           mkdir HTML && cd HTML
           npm install snyk-to-html -g
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-Keyvault.json -o SnykReport-Keyvault.html
+          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
 
     - task: CmdLine@2
       displayName: Transform test to HTML
@@ -46,7 +46,7 @@ stages:
         script: |
           mkdir HTML && cd HTML
           npm install snyk-to-html -g
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-Keyvault.json -o SnykReport-Keyvault.html
+          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
 
     - task: PublishBuildArtifacts@1
       displayName: Publish HTML reports as artifacts
@@ -58,7 +58,7 @@ stages:
 
     - task: RunARMTTKTests@1
       inputs:
-        templatelocation: '$(System.DefaultWorkingDirectory)\src\Bicep\vaults\*'
+        templatelocation: '$(System.DefaultWorkingDirectory)\src\ARM\AzureSecurityCenter\*'
         resultLocation: '$(System.DefaultWorkingDirectory)\results'
         allTemplatesMain: false
         cliOutputResults: true
