--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -69,3 +69,14 @@ stages:
         testResultsFormat: 'NUnit'
         testResultsFiles: '$(System.DefaultWorkingDirectory)\results\*-armttk.xml'
       condition: always()
+
+    - task: AzureResourceManagerTemplateDeployment@3
+      inputs:
+        deploymentScope: 'Resource Group'
+        azureResourceManagerConnection: 'josunefoConnection'
+        subscriptionId: 'ed29c799-3b06-4306-971a-202c3c2d29a9'
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: 'SPARKFY22H2-ARM'
+        templateLocation: '$(System.DefaultWorkingDirectory)\src\ARM\AzureSecurityCenter\deploy.json'
+        deploymentMode: 'Incremental'
+        deploymentName: 'Azure Security Center deployment'
