Update ado-arm.yaml for Azure Pipelines

--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -33,20 +33,12 @@ stages:
         script: |
           npm install snyk@latest -g
           snyk auth $(SnykAPIConnection)
+          write-host ">>>> Running test"
           snyk iac test ./src/ARM/AzureSecurityCenter/deploy.json --json-file-output=./SnykReport-AzureSecurityCenter.json
-          write-host "test"
+          write-host ">>>>> Publishing test results"
           mkdir HTML && cd HTML
           npm install snyk-to-html -g
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
-
-    - task: CmdLine@2
-      displayName: Transform test to HTML
-      inputs:
-        workingDirectory: $(Build.SourcesDirectory)
-        script: |
-          mkdir HTML && cd HTML
-          npm install snyk-to-html -g
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
+          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o ./SnykReport-AzureSecurityCenter.html
 
     - task: PublishBuildArtifacts@1
       displayName: Publish HTML reports as artifacts
@@ -71,6 +63,7 @@ stages:
       condition: always()
 
     - task: AzureResourceManagerTemplateDeployment@3
+      displayName: 'Azure Deployment: Storage Account & Function App'
       inputs:
         deploymentScope: 'Resource Group'
         azureResourceManagerConnection: 'josunefoConnection'
@@ -78,6 +71,8 @@ stages:
         action: 'Create Or Update Resource Group'
         location: 'westeurope'
         resourceGroupName: 'SPARKFY22H2-ARM'
-        templateLocation: '$(System.DefaultWorkingDirectory)\src\ARM\AzureSecurityCenter\deploy.json'
+        templateLocation: 'Linked artifact'
+        csmFile: '$(System.ArtifactsDirectory)/${{ parameters.artifacts }}/src/ARM/AzureSecurityCenter/deploy.json'
         deploymentMode: 'Incremental'
-        deploymentName: 'Azure Security Center deployment'
+        deploymentName: 'deploySecurityCenter'
+        deploymentOutputs: 'armOutput'
