--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -72,7 +72,7 @@ stages:
         location: 'westeurope'
         resourceGroupName: 'SPARKFY22H2-ARM'
         templateLocation: 'Linked artifact'
-        csmFile: '$(System.ArtifactsDirectory)/${{ parameters.artifacts }}/src/ARM/AzureSecurityCenter/deploy.json'
+        csmFile: '$(System.ArtifactsDirectory)/src/ARM/AzureSecurityCenter/deploy.json'
         deploymentMode: 'Incremental'
         deploymentName: 'deploySecurityCenter'
         deploymentOutputs: 'armOutput'
