--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -15,12 +15,6 @@ stages:
       vmImage: 'windows-2022'
     steps:
     - checkout: self
-    - task: CmdLine@2
-      displayName: Install-Snyk-Cli
-      inputs:
-        workingDirectory: $(Build.SourcesDirectory)
-        script: |
-          npm install snyk@latest -g
 
     - task: CmdLine@2
       displayName: Snyk-test-module
@@ -75,7 +69,9 @@ stages:
         location: 'westeurope'
         resourceGroupName: 'SPARKFY22H2-ARM'
         templateLocation: 'Linked artifact'
-        csmFile: '$(System.DefaultWorkingDirectory)\src\ARM\AzureSecurityCenter\deploy.json'
+        csmFile: '$(System.DefaultWorkingDirectory)/src/ARM/AzureSecurityCenter/deploy.json'
+        csmParametersFile: '$(System.DefaultWorkingDirectory)/src/ARM/AzureSecurityCenter/parameters/parameters.json'
+        overrideParameters: '-worspaceId "/subscriptions/ed29c799-3b06-4306-971a-202c3c2d29a9/resourceGroups/sparkfy22h2-arm/providers/Microsoft.OperationalInsights/workspaces/jojo-spark-worspace"'
         deploymentMode: 'Incremental'
         deploymentName: 'deploySecurityCenter'
         deploymentOutputs: 'armOutput'
