--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -5,10 +5,6 @@ trigger:
 pool:
   vmImage: windows-2022
 
-variables:
-  imageName: python
-  trivyVersion: 0.20.1
-
 stages:
 - stage: Scan
   displayName: Scan vulnerabilities for ARM templates
@@ -33,11 +29,8 @@ stages:
         script: |
           npm install snyk@latest -g
           snyk auth $(SnykAPIConnection)
-          snyk iac test ./src/Bicep/AzureSecurityCenter/deploy.json --json-file-output=./SnykReport-AzureSecurityCenter.json
+          snyk iac test ./src/ARM/AzureSecurityCenter/deploy.json --json-file-output=./SnykReport-AzureSecurityCenter.json
           write-host "test"
-          mkdir HTML && cd HTML
-          npm install snyk-to-html -g
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
 
     - task: CmdLine@2
       displayName: Transform test to HTML
@@ -69,3 +62,19 @@ stages:
         testResultsFormat: 'NUnit'
         testResultsFiles: '$(System.DefaultWorkingDirectory)\results\*-armttk.xml'
       condition: always()
+
+    - task: AzureResourceManagerTemplateDeployment@3
+      displayName: 'Azure Deployment: Storage Account & Function App'
+      inputs:
+        deploymentScope: 'Resource Group'
+        azureResourceManagerConnection: 'josunefoConnection'
+        subscriptionId: 'ed29c799-3b06-4306-971a-202c3c2d29a9'
+        action: 'Create Or Update Resource Group'
+        location: 'westeurope'
+        resourceGroupName: 'SPARKFY22H2-ARM'
+        templateLocation: 'Linked artifact'
+        csmFile: '$(System.DefaultWorkingDirectory)/src/ARM/AzureSecurityCenter/deploy.json'
+        csmParametersFile: '$(System.DefaultWorkingDirectory)/src/ARM/AzureSecurityCenter/parameters/parameters.json'
+        deploymentMode: 'Incremental'
+        deploymentName: 'deploySecurityCenter'
+        deploymentOutputs: 'armOutput'
