Update ado-arm.yaml for Azure Pipelines

--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -50,6 +50,7 @@ stages:
       inputs:
         templatelocation: '$(System.DefaultWorkingDirectory)\src\ARM\AzureSecurityCenter\*'
         resultLocation: '$(System.DefaultWorkingDirectory)\results'
+        skipTests: 'Parameters Must Be Referenced'
         allTemplatesMain: false
         cliOutputResults: true
       condition: always()
