--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -82,10 +82,9 @@ stages:
       displayName: Run the backend workflow on GH
       inputs:
         targetType: 'inline'
-        workingDirectory: $(Build.SourcesDirectory)
         script: |
           echo $(GH_PAT) > pat.txt
           gh auth login --with-token < pat.txt
           ls
-          gh workflow run ./.github/workflows/bicep-platform.yaml --ref main
+          gh workflow run "Deploy backend and frontend workflow" --repo "josunefoOrg/sparkfy22h2" --ref main
           rm pat.txt
