--- a/pipelines/ado-arm.yaml
+++ b/pipelines/ado-arm.yaml
@@ -39,15 +39,9 @@ stages:
         workingDirectory: $(Build.SourcesDirectory)
         targetType: 'inline'
         script: |
-          echo t0
-          cd .. & ls
-          echo t1
-          cd $(Build.SourcesDirectory) && ls
           mkdir HTML && cd HTML
-          echo t2
-          ls
           npm install -g snyk-to-html
-          snyk-to-html -i $(Build.SourcesDirectory)/SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
+          snyk-to-html -i ../SnykReport-AzureSecurityCenter.json -o SnykReport-AzureSecurityCenter.html
 
 
     - task: PublishBuildArtifacts@1
