--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -20,7 +20,7 @@ jobs:
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
     steps:
       - uses: actions/checkout@v2
@@ -61,8 +61,10 @@ jobs:
         with:
           sarif_file: ./src/Terraform/container-registry/tfsec-container-registry.sarif
 
-      # - name: ACR TF Deployment
-      #   if: steps.tflint-execution.outcome != 'success' && steps.tfsec-execution.outcome != 'success'
-      #   run: |
-      #     terraform init
-      #     terraform validate
+      - name: ACR TF Deployment
+        if: steps.tflint-execution.outcome == 'success' && steps.tfsec-execution.outcome == 'success'
+        run: |
+          terraform init
+          terraform validate
+          terraform plan -out tfplan
+          terraform apply --auto-approve tfplan
